--- a/index.css
+++ b/index.css
@@ -96,6 +96,7 @@ body {
 
 .better a {
   text-decoration: none;
+  color: white;
 }
 
 .better {
@@ -103,4 +104,5 @@ body {
   bottom: 0;
   width: 100%;
   text-align: center;
+  color: white;
 }
